Created price and url test

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Price:</strong>
-  <%= @product.price %>
+  <%= @product.price %> €
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
