--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -1,11 +1,11 @@
 // Place all the styles related to the Store controller here.
-// They will automatically be included in application.css.
+// They will automatically be included in application.scss.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .store{
   max-width: 80em;
   ul.catalog{
     border-top: solid 0.250em;
-    list_style: none;
+    list-style: none;
     padding: 0;
     margin: 0;
     li {
