--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Depot</title>
+    <title>Books online store</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,8 +11,15 @@
   </head>
 
   <body>
+  <header class="main">
+    <%= image_tag 'logo.svg', alt: 'Pragmatic book shelf' %>
+    <h1><%= @page_title %></h1>
+  </header>
+  <section class="content">
+    <%= render 'layouts/navigation' %>
   <main class='<%= controller.controller_name %>'>
     <%= yield %>
   </main>
+  </section>
   </body>
 </html>
