--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,10 @@ header.main{
                     color: white;
                 }
             }
+
+            .time{
+                color:white;
+            }
         }
     }
     main {
