Created line item

--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -18,12 +18,11 @@
         display: block;
       }
       img{
-        max-height: 200px;
         float: left;
         padding: 1em;
         margin-right: 1em;
         margin-bottom: 1em;
-        box-shadow: 0.176em 0.176em 0.354em 0px rgba(0,0,0,0.75);
+        box-shadow: 0.176em 0.176em 0.354em 0px rgba(0, 0, 0, 0.35);
       }
       .price{
         font-size: 1.414em;
