--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,6 +4,6 @@
     <li><a href="/questions">Questions</a></li>
     <li><a href="/news">News</a></li>
     <li><a href="/contact">Contact</a></li>
-    <li class="time"><%= Time.now %></li>
+    <li class="time"><%= Time.new.strftime("%Y-%m-%d %H:%M:%S") %></li>
   </ul>
 </nav>
