Updated store index and added line_item quant

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,8 +3,10 @@
 <% end %>
 
 <h2>Your Pragmatic Cart</h2>
-<ul>
+
+<ul class="cart_content">
   <% @cart.line_items.each do |item| %>
-    <li><%= item.product.title %></li>
+    <li><%= item.quantity %> &times <%= item.product.title %></li>
   <% end %>
 </ul>
+
