--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,10 +54,13 @@ header.main{
         text-align: center; // mobile has centered nav @media (min-width: 30em) {
         text-align: left; // desktop nav is left-aligned
         padding: 1em;
+        ul{
+            list-style: none;
+        }
     }
     ul {
         // and needs more padding
-        list-style: none;
+
         margin: 0;
         padding: 0;
         @media (min-width: 30em) {
