--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Carts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.cart_content{
+    list-style-type: circle;
+    margin-left: 20px;
+    padding-left: 0;
+}
