--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -2,9 +2,11 @@
 // They will automatically be included in application.scss.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .products{
+
   margin: 0;
   padding: 0.5em;
   a{
+    color:black;
     padding: 0.354em 0.5em;
     border-radius: 0.354em;
   }
