--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,9 @@
 <nav class="side_nav">
+  <% if @cart %>
+    <div id="cart" class="carts">
+      <%= render_if @cart && @cart.line_items.any?, @cart %>
+    </div>
+  <% end %>
   <ul>
     <li> <%= link_to "Home", store_index_path %></li>
     <li><a href="/questions">Questions</a></li>
