--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,6 @@
-<p id="notice"><%= notice %></p>
-
+<% if notice %>
+  <p id="notice"><%= notice %></p>
+<% end %>
 <%= render 'product_listing' %>
 
 
