--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -6,5 +6,5 @@
   <td class="quantity"><%= line_item.quantity %></td>
   <td><%= line_item.product.title %></td>
   <td class="price"><%= number_to_currency(line_item.total_price) %></td>
-  <td><%= button_to 'Remove', line_item, method: :delete, class: "remove_button" %></td>
+  <td><%= button_to 'Remove', line_item, method: :delete, class: "remove_button", remote: true%></td>
 </tr>
