--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -17,7 +17,7 @@
         content: " ";
         display: block;
       }
-      img{
+      .image_button{
         float: left;
         padding: 1em;
         margin-right: 1em;
