--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -9,7 +9,9 @@
     <% @products.each do |product| %>
       <% cache product do %>
         <li>
-          <%=image_tag (product.image_url) %>
+          <%= form_with url: line_items_path(product_id: product), method: :post, local: false do %>
+            <%= image_submit_tag(product.image_url, alt:"#{product.title} book cover" , class: "image_button")%>
+          <% end %>
           <h2><%= product.title %></h2>
           <p>
             <%= sanitize(product.description)  %>
