--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -9,5 +9,8 @@
     </tr>
     </tfoot>
   </table>
-  <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' }, remote: true%>
+  <div class="actions">
+    <%= button_to 'Checkout', new_order_path, method: :get, class: "checkout"%>
+    <%= button_to 'Empty cart', cart, method: :delete, class: "empty_cart", data: { confirm: 'Are you sure?' }, remote: true%>
+  </div>
 </article>
