Removed checkout button from checkout, remove button decreases quantity and added num of sessions counter

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,6 +76,14 @@ header.main{
                     }
                 }
 
+                .store_counter{
+                    color: #bfb;
+                    text-decoration: none;
+                }
+                .store_counter:hover{
+                    background: none;
+                    color: white;
+                }
                 .time{
                     color: #bfb;
                     text-decoration: none;
