--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,7 +1,9 @@
 <article>
   <h2>Your Cart</h2>
   <table>
-    <%= render(cart.line_items) %>
+    <% cart.line_items.each do |line_item| %>
+      <%= render partial: 'line_items/line_item', locals: {delete_last_redirect: delete_last_redirect, line_item: line_item} %>
+    <% end %>
     <tfoot>
     <tr>
       <th colspan="2">Total:</th>
@@ -10,7 +12,7 @@
     </tfoot>
   </table>
   <div class="actions">
-    <%= button_to 'Checkout', new_order_path, method: :get, class: "checkout"%>
-    <%= button_to 'Empty cart', cart, method: :delete, class: "empty_cart", data: { confirm: 'Are you sure?' }, remote: true%>
+    <%= button_to 'Checkout', new_order_path, method: :get, class: "checkout" unless delete_last_redirect%>
+    <%= button_to 'Empty cart', cart, method: :delete, class: "empty_cart", data: { confirm: 'Are you sure?' }, remote: (current_page?(:controller => 'orders', :action => 'new') ? false:true) %>
   </div>
 </article>
