--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -6,5 +6,12 @@
   <td class="quantity"><%= line_item.quantity %></td>
   <td><%= line_item.product.title %></td>
   <td class="price"><%= number_to_currency(line_item.total_price) %></td>
-  <td><%= button_to 'Remove', line_item, method: :delete, class: "remove_button", remote: true%></td>
+  <td>
+<!--trenutno ne radi samo ako odmah idem brisat prvi item čim ga stavim u cart-->
+    <% puts "-----> ", delete_last_redirect, (@cart.line_items.count == 1) %>
+    <%= button_to 'Remove', line_item, method: :delete, class: "remove_button", remote: (delete_last_redirect && (@cart.line_items.count == 1 && line_item.quantity==1) ? false:true) %>
+
+  </td>
 </tr>
+
+
