--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,4 +1,4 @@
 cart = document.getElementById("cart")
-cart.innerHTML = "<%= j render(@cart) %>"
+cart.innerHTML = "<%= j render partial: 'carts/cart', locals: {delete_last_redirect: false, cart: @cart}  %>"
 notice = document.getElementById("notice")
 if (notice) notice.style.display = "none"
