--- a/app/views/line_items/destroy.js.erb
+++ b/app/views/line_items/destroy.js.erb
@@ -1,4 +1,8 @@
 cart = document.getElementById("cart")
-cart.innerHTML = "<%= j render_if @cart && @cart.line_items.any?, @cart %>"
+// završiti ajax
+<% if @cart && @cart.line_items.any? %>
+  cart.innerHTML = "<%= j render partial: 'carts/cart', locals: {delete_last_redirect: true, cart: @cart}  %>"
+<% end %>
+
 notice = document.getElementById("notice")
 if (notice) notice.style.display = "none"
