--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,4 +1,11 @@
+<%content_for :cart do  %>
+  <% if @cart && @cart.line_items.any?  %>
+    <%= render partial: 'carts/cart', locals: {delete_last_redirect: true, cart: @cart}  %>
+  <% end %>
+<% end %>
+
 <section class="depot_form">
   <h1>Please Enter Your Details</h1>
   <%= render 'form', order: @order %>
 </section>
+<%= javascript_pack_tag('pay_type') %>
