Added actioncabel to top list and finished mailer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -95,7 +95,8 @@ header.main{
             }
         }
         .top_list {
-            background-color: white;
+            border-radius: 3px;
+            background-color: beige;
             table {
                 border-collapse: collapse;
             }
