--- a/app/views/order_mailer/received.text.erb
+++ b/app/views/order_mailer/received.text.erb
@@ -1,5 +1,10 @@
-Dear <%= @order.name %>
+Dear <%= @order.name %>,
+
 Thank you for your recent order from The Pragmatic Store.
+
 You ordered the following items:
-<%= render @order.line_items -%>
+<% @order.line_items.each do |line_item| %>
+  <%=line_item.quantity %> x <%=line_item.product.title %>
+<% end %>
+
 We'll send you a separate email when your order ships.
