Added simple user

--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -24,6 +24,9 @@
         margin-bottom: 1em;
         box-shadow: 0.176em 0.176em 0.354em 0px rgba(0, 0, 0, 0.35);
       }
+      .image_button:hover{
+        background-color: white;
+      }
       .price{
 
         font-size: 1.414em;
