--- a/app/views/order_mailer/shipped.html.erb
+++ b/app/views/order_mailer/shipped.html.erb
@@ -6,5 +6,10 @@
   <tr>
     <th colspan="2">Qty</th><th>Description</th>
   </tr>
-  <%= render @order.line_items -%>
+  <% @order.line_items.each do |line_item| %>
+    <tr>
+      <td><%=line_item.quantity %></td>
+      <td><%=line_item.product.title %></td>
+    </tr>
+  <% end %>
 </table>
