--- a/app/views/order_mailer/received.html.erb
+++ b/app/views/order_mailer/received.html.erb
@@ -1,5 +1,10 @@
-<h1>Order#received</h1>
+Dear <%= @order.name %>,
 
-<p>
-  <%= @greeting %>, find me in app/views/order_mailer/received.html.erb
-</p>
+Thank you for your recent order from The Pragmatic Store.
+
+You ordered the following items:
+<% @order.line_items.each do |line_item| %>
+  <%=line_item.quantity %> x <%=line_item.product.title %>
+<% end %>
+
+We'll send you a separate email when your order ships.
