--- a/app/views/order_mailer/received.text.erb
+++ b/app/views/order_mailer/received.text.erb
@@ -1,10 +1,5 @@
-Dear <%= @order.name %>,
+<h1>Order#received</h1>
 
-Thank you for your recent order from The Pragmatic Store.
-
-You ordered the following items:
-<% @order.line_items.each do |line_item| %>
-  <%=line_item.quantity %> x <%=line_item.product.title %>
-<% end %>
-
-We'll send you a separate email when your order ships.
+<p>
+  <%= @greeting %>, find me in app/views/order_mailer/received.html.erb
+</p>
