--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,6 +120,27 @@ header.main{
             }
         }
     }
+        .logged_in_nav {
+            border-top: solid thin #bfb;
+            padding: 0.354em 0;
+            margin-top: 0.354em;
+
+            input[type="submit"] {
+                background: none;
+                border: none;
+                color: #bfb;
+                font-size: 1em;
+                letter-spacing: 0.354em;
+                margin: 0;
+                padding: 0;
+                text-transform: uppercase;
+            }
+
+            input[type="submit"]:hover {
+                color: white;
+            }
+        }
+    }
 }
 .depot_form {
     padding: 0 1em;
@@ -194,4 +215,5 @@ header.main{
             background: pink;
         }
     }
-}}
+}
+
