--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,6 +13,21 @@
     <li class="time"><%= Time.new.strftime("%Y-%m-%d %H:%M:%S") %></li>
     <li class="store_counter"> <%= yield :counter %> </li>
   </ul>
+
+  <% if session[:user_id] %>
+    <nav class="logged_in_nav">
+      <ul>
+        <li><%= link_to 'Orders', orders_path%> </li>
+        <li><%= link_to 'Products', products_path %></li>
+        <li><%= link_to 'Users', users_path %></li>
+        <li><%= button_to 'Logout', logout_path, method: :delete%></li>
+      </ul>
+    </nav>
+  <% else %>
+    <div class="logged_in_nav">
+      <%= button_to 'Login', login_path, method: :get%>
+    </div>
+  <% end %>
   <div class="top_list">
     <%= render 'layouts/top_list' %>
   </div>
