--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,11 @@
  *= require_tree .
  *= require_self
  */
+.locale {
+    float: right;
+    margin: 1em;
+}
+
 body {
     margin: 0;
     padding: 0;
