--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,10 +6,10 @@
     </div>
   <% end %>
   <ul>
-    <li> <%= link_to "Home", store_index_path %></li>
-    <li><a href="/questions">Questions</a></li>
-    <li><a href="/news">News</a></li>
-    <li><a href="/contact">Contact</a></li>
+    <li> <%= link_to t('.home'), store_index_path %></li>
+    <li><a href="/questions"><%= t('.questions') %></a></li>
+    <li><a href="/news"><%= t('.news') %></a></li>
+    <li><a href="/contact"><%= t('.contact') %></a></li>
     <li class="time"><%= Time.new.strftime("%Y-%m-%d %H:%M:%S") %></li>
     <li class="store_counter"> <%= yield :counter %> </li>
   </ul>
