--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Review</h1>
-
-<%= render 'form', review: @review %>
-
+<h1>Rate <em><%= @product.title %></em></h1>
+<div class ="rating_form">
+  <%= render 'form', review: @review %>
+</div>
 
