--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -13,7 +13,7 @@
   <aside id="notice"><%= notice %></aside>
 <% end %>
 
-<h1>Welcome to the store</h1>
+<h1><%= t('.title_html') %></h1>
 
 <ul class="catalog">
   <% cache @products do %>
@@ -27,10 +27,10 @@
           </p>
           <div class="price">
             <%= number_to_currency(product.price) %>
-            <%= button_to 'Add to Cart', line_items_path(product_id: product), remote: true %>
-            <%= button_to 'Rate', new_product_review_url(product_id: product), method: :get %>
+            <%= button_to t('.add_html'), line_items_path(product_id: product, locale: I18n.locale), remote: true %>
+            <%= button_to 'Rate', new_product_review_url(product_id: product), method: :get, class: "rate" %>
             <% if product.reviews.any? %>
-              <%= "Avarage rating: #{sprintf("%0.02f", product.reviews.average(:rating))}" %>
+              <p><%= "Avarage rating: #{sprintf("%0.02f", product.reviews.average(:rating))}" %></p>
             <% end %>
           </div>
 
