--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -30,7 +30,7 @@
             <%= button_to t('.add_html'), line_items_path(product_id: product, locale: I18n.locale), remote: true %>
             <%= button_to 'Rate', new_product_review_url(product_id: product), method: :get, class: "rate" %>
             <% if product.reviews.any? %>
-              <p><%= "Avarage rating: #{sprintf("%0.02f", product.reviews.average(:rating))}" %></p>
+              <p><%= "Avarage rating: #{sprintf("%0.02f", product.average_rating())}" %></p>
             <% end %>
           </div>
 
