Created support request model

--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -12,7 +12,7 @@
     </tfoot>
   </table>
   <div class="actions">
-    <%= button_to t('.checkout'), new_order_path(locale: I18n.locale), method: :get, class: "checkout" unless delete_last_redirect%>
+    <%= button_to t('.checkout'), new_order_path(locale: I18n.locale), method: :get, class: "checkout" %>
     <%= button_to t('.empty_cart'), cart, method: :delete, class: "empty_cart", data: { confirm: 'Are you sure?' }, remote: (current_page?(:controller => 'orders', :action => 'new') ? false:true) %>
   </div>
 </article>
