--- a/app/views/support_request_mailer/respond.html.erb
+++ b/app/views/support_request_mailer/respond.html.erb
@@ -1,5 +1,3 @@
-<h1>SupportRequest#respond</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/support_request_mailer/respond.html.erb
-</p>
+<%= @support_request.response %> <hr>
+<blockquote>
+  <%= @support_request.body %> </blockquote>
